--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,26 @@
-spring.application.name=SPI-Backend
-
-# Oracle datasource
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=DOSI
+# ===============================
+# Oracle JDBC Connection
+# ===============================
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+spring.datasource.username=system
 spring.datasource.password=dosi
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+# ===============================
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# ===============================
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# Optional: logging
+# ===============================
+# Connection Pool (HikariCP)
+# ===============================
+spring.datasource.hikari.pool-name=OracleHikariPool
+
+# ===============================
+# Logging (optional but useful)
+# ===============================
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
