--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
 spring.datasource.username=system
 spring.datasource.password=dosi
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.main.banner-mode=off
 
 # ===============================
 # JPA / Hibernate
