--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,18 @@ spring.main.banner-mode=off
 # JPA / Hibernate
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Set default schema to DOSI
+spring.jpa.properties.hibernate.default_schema=DOSI
 
 # ===============================
 # Connection Pool (HikariCP)
 # ===============================
 spring.datasource.hikari.pool-name=OracleHikariPool
+spring.datasource.hikari.schema=DOSI
 
 # ===============================
 # Logging (optional but useful)
